# hashi

./: .containerignore  Cargo.toml  Makefile  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  move.yml  rustdoc.yml
contracts/btc/sources/: btc.move
contracts/hashi/: Move.toml
contracts/hashi/sources/: hashi.move
contracts/hashi/tests/: hashi_tests.move
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: deposit_flow.rs  e2e_flow.rs  hashi_network.rs  lib.rs  main.rs  publish.rs  sui_network.rs
crates/hashi/: Cargo.toml  Makefile  buf.yaml
crates/hashi-btc/: Cargo.toml
crates/hashi-btc/examples/: testnet_monitor.rs
crates/hashi-btc/src/: monitor.rs
crates/hashi-cli/: Cargo.toml
crates/hashi-cli/src/: client.rs  config.rs  main.rs  types.rs
crates/hashi-cli/src/commands/: committee.rs  config.rs  proposal.rs
crates/hashi-guardian-enclave/: Cargo.toml  README.md
crates/hashi-guardian-enclave/src/: getters.rs  heartbeat.rs  init.rs  main.rs  rpc.rs  s3_logger.rs  setup.rs  withdraw.rs
crates/hashi-guardian-shared/: Cargo.toml
crates/hashi-guardian-shared/src/: bitcoin_utils.rs  crypto.rs  epoch_store.rs  errors.rs  lib.rs  proto_conversions.rs  s3_logger.rs  test_utils.rs
crates/hashi-monitor/: Cargo.toml  README.md
crates/hashi-monitor/src/: domain.rs  lib.rs  main.rs  rpc.rs  state_machine.rs
crates/hashi-monitor/src/audit/: batch.rs  continuous.rs  mod.rs
crates/hashi-monitor/src/kp/: config.rs  heartbeat_checks.rs  mod.rs
crates/hashi-screener/: Cargo.toml
crates/hashi-types/: Cargo.toml  buf.yaml
crates/hashi-types/proto/sui/hashi/v1alpha/: bridge_service.proto  guardian_service.proto  key_rotation_service.proto  mpc_service.proto
crates/hashi-types/src/: committee.rs  lib.rs
crates/hashi-types/src/guardian/: crypto.rs  mod.rs  s3_utils.rs  time_utils.rs
crates/hashi-types/src/move_types/: mod.rs
crates/hashi-types/src/proto/: mod.rs
crates/hashi/proto/sui/hashi/v1alpha/: bridge_service.proto  dkg_service.proto  key_rotation_service.proto
crates/hashi/src/: bls.rs  committee.rs  config.rs  db.rs  deposits.rs  epoch_storage.rs  leader.rs  lib.rs  main.rs  metrics.rs  mpc.rs  sui_tx_executor.rs  tls.rs  tls_rpk.rs  withdrawals.rs
crates/hashi/src/btc_monitor/: config.rs  monitor.rs
crates/hashi/src/cli/: client.rs  config.rs  mod.rs  types.rs
crates/hashi/src/cli/commands/: balance.rs  committee.rs  config.rs  deposit.rs  mod.rs  proposal.rs  withdraw.rs
crates/hashi/src/communication/: interfaces.rs  mod.rs  sui_tob.rs  timeout_and_retry.rs
crates/hashi/src/dkg/: interfaces.rs  mod.rs  types.rs
crates/hashi/src/dkg/rpc/: mod.rs  p2p_channel.rs  proto_conversions.rs  service.rs
crates/hashi/src/grpc/: bridge_service.rs  client.rs  mod.rs
crates/hashi/src/leader/: garbage_collection.rs  mod.rs
crates/hashi/src/mpc/: mod.rs  mpc_except_signing.rs  service.rs  signing.rs  types.rs
crates/hashi/src/mpc/rpc/: mod.rs  p2p_channel.rs  proto_conversions.rs  service.rs
crates/hashi/src/onchain/: events.rs  mod.rs  move_types.rs  types.rs  watcher.rs
crates/hashi/src/storage/: epoch_public_messages_store.rs  interfaces.rs
crates/proto-build/: Cargo.toml
crates/proto-build/src/: main.rs
crates/test-networks/: Cargo.toml
crates/test-networks/src/: bitcoin_node.rs  deposit_flow.rs  hashi_network.rs  lib.rs  sui_network.rs
design/src/: README.md  SUMMARY.md  address-scheme.md  committee.md  deposit.md  governance-actions.md  guardian.md  limiter.md  move-model-lifecycle.md  reconfiguration.md  sanctions.md  service.md  user-flows.md  withdraw.md
docker/: Containerfile  build.sh
docker/hashi/: Containerfile  build.sh
