[package]
name = "hashi-btc"
version = "0.0.0"
edition = "2024"
description = "Bitcoin management library for the Hashi system"

[dependencies]
# Bitcoin libraries
bitcoin.workspace = true
bitcoincore-rpc.workspace = true

anyhow.workspace = true
bdk_chain = "0.23.1"
bdk_core = "0.6.1"
clap.workspace = true
kyoto-cbf = "0.13.2"
serde.workspace = true
serde_derive.workspace = true
sui-futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "testnet_monitor"
path = "examples/testnet_monitor.rs"
