[package]
name = "hashi-guardian-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
bcs.workspace = true
hashi-types = { path = "../hashi-types" }
sui-sdk-types.workspace = true

# Crypto dependencies
# Note: bitcoin v0.32.7 and k256 v0.13 both require rand_core 0.6.4
# hpke 0.13.0 uses rand 0.9 which conflicts - must use hpke 0.12.0
hpke = "0.12.0"
rand.workspace = true
rand_core.workspace = true
k256 = "0.13"
bitcoin.workspace = true
blake2 = "0.10"
ed25519-consensus = "2.1"
miniscript = "13.0.0"
fastcrypto-tbls.workspace = true
fastcrypto.workspace = true

[dev-dependencies]
tokio.workspace = true
