[package]
name = "hashi-types"
version = "0.0.0"
edition = "2024"

[dependencies]
sui-sdk-types.workspace = true
sui-crypto.workspace = true
sui-rpc.workspace = true

serde.workspace = true
serde_derive.workspace = true
bcs.workspace = true

# Dependencies for the protobuf definitions
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

# crypto deps
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true

anyhow.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
test-strategy.workspace = true
proptest.workspace = true
rand.workspace = true
