[package]
name = "test-networks"
version = "0.0.0"
edition = "2024"

[dependencies]
hashi = { path = "../hashi" }
hashi-btc = { path = "../hashi-btc" }
hashi-types = { path = "../hashi-types" }

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
prometheus.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tempfile.workspace = true
sui-rpc.workspace = true
sui-crypto.workspace = true
sui-sdk-types.workspace = true
base64ct.workspace = true
serde_yaml.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
